--- a/mfua/content/html/index.html
+++ b/mfua/content/html/index.html
@@ -19,15 +19,15 @@
 
     <main>
         <section class="hero">
-            <h1>Добро пожаловать на мой сайт!</h1>
-            <p>Я занимаюсь веб-разработкой и созданием современных сайтов</p>
+            <h1>Добро пожаловать на мой крутой сайт!</h1>
+            <p>Я занимаюсь в основном веб-разработкой и созданием современных сайтов</p>
         </section>
 
         <section class="services">
             <h2>Мои услуги</h2>
             <div class="service-grid">
                 <div class="service-item">
-                    <h3>Веб-разработка</h3>
+                    <h3>Веб-разработка и не только</h3>
                     <p>Создание современных и адаптивных сайтов</p>
                 </div>
                 <div class="service-item">
